--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+## Tmp files:
+*~
+
 ## Core latex/pdflatex auxiliary files:
 *.aux
 *.lof
@@ -11,8 +14,8 @@
 *.dvi
 # these rules might exclude image files for figures etc.
 # *.ps
-# *.eps
-# *.pdf
+*.eps
+*.pdf
 
 ## Bibliography auxiliary files (bibtex/biblatex/biber):
 *.bbl
